chore(pfAppLauncher): launcher icon moved to the right to prevent cutoff

--- a/misc/ng-docs.css
+++ b/misc/ng-docs.css
@@ -44,6 +44,12 @@
   margin-right: 0px;
 }
 
+a.navbar-brand img {
+  height: inherit;
+  width: inherit;
+  margin-top: inherit;
+}
+
 .navbar img+.brand {
   padding: 10px 20px 10px 10px;
 }
